--- a/notebooks/exploration_data_processing.ipynb
+++ b/notebooks/exploration_data_processing.ipynb
@@ -10,24 +10,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "d550e7be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "\n",
+    "project_root = Path().resolve().parents[0]\n",
+    "data_path = project_root / \"data\" / \"decoded\" / \"decoded_2025_12_04.csv\""
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a425a38f",
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2b6982ab",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>updatedAt</th>\n",
+       "      <th>deckCode</th>\n",
+       "      <th>cards</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-10-24T03:16:11.906Z</td>\n",
+       "      <td>ECAgXRACnal9g-yXSlpV02GpPqB1J6sdth3zW-dZhTv64d...</td>\n",
+       "      <td>\"1 ALT_CORE_B_OR_02_C\\n2 ALT_COREKS_B_OR_09_R1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-10-24T03:16:11.948Z</td>\n",
+       "      <td>ECAgnRDtUBStS2wbZPpW0x6gdThE56sdhhWzW-9cW2HbLs...</td>\n",
+       "      <td>\"1 ALT_CORE_B_OR_02_C\\n1 ALT_CORE_B_OR_21_R1\\n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-10-24T03:16:11.978Z</td>\n",
+       "      <td>ECAgmxjkIBS5TdqayDZMTi6zjZ8KaO2jbsISq3lkLuR86Z...</td>\n",
+       "      <td>\"1 ALT_CORE_B_LY_03_C\\n1 ALT_CORE_B_MU_16_R2\\n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-10-24T03:16:12.007Z</td>\n",
+       "      <td>ECAgnRDsEBStS2wfSvpj1A6k9WNJwkhbfWuHX4mO-2LlzM...</td>\n",
+       "      <td>\"1 ALT_CORE_B_OR_02_C\\n1 ALT_CORE_B_OR_16_R1\\n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-10-24T03:16:12.045Z</td>\n",
+       "      <td>ECAgXRACl6l9gsnxSVtKumw439QerK31rh157YuXOuw-m9...</td>\n",
+       "      <td>\"1 ALT_CORE_B_OR_02_C\\n3 ALT_COREKS_B_OR_09_R1...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  updatedAt  \\\n",
+       "0  2024-10-24T03:16:11.906Z   \n",
+       "1  2024-10-24T03:16:11.948Z   \n",
+       "2  2024-10-24T03:16:11.978Z   \n",
+       "3  2024-10-24T03:16:12.007Z   \n",
+       "4  2024-10-24T03:16:12.045Z   \n",
+       "\n",
+       "                                            deckCode  \\\n",
+       "0  ECAgXRACnal9g-yXSlpV02GpPqB1J6sdth3zW-dZhTv64d...   \n",
+       "1  ECAgnRDtUBStS2wbZPpW0x6gdThE56sdhhWzW-9cW2HbLs...   \n",
+       "2  ECAgmxjkIBS5TdqayDZMTi6zjZ8KaO2jbsISq3lkLuR86Z...   \n",
+       "3  ECAgnRDsEBStS2wfSvpj1A6k9WNJwkhbfWuHX4mO-2LlzM...   \n",
+       "4  ECAgXRACl6l9gsnxSVtKumw439QerK31rh157YuXOuw-m9...   \n",
+       "\n",
+       "                                               cards  \n",
+       "0  \"1 ALT_CORE_B_OR_02_C\\n2 ALT_COREKS_B_OR_09_R1...  \n",
+       "1  \"1 ALT_CORE_B_OR_02_C\\n1 ALT_CORE_B_OR_21_R1\\n...  \n",
+       "2  \"1 ALT_CORE_B_LY_03_C\\n1 ALT_CORE_B_MU_16_R2\\n...  \n",
+       "3  \"1 ALT_CORE_B_OR_02_C\\n1 ALT_CORE_B_OR_16_R1\\n...  \n",
+       "4  \"1 ALT_CORE_B_OR_02_C\\n3 ALT_COREKS_B_OR_09_R1...  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "decoded = pd.read_csv(data_path)\n",
+    "decoded.head()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "empyree-dIymDXH_-py3.13",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
