--- a/notebooks/exploration_data_processing.ipynb
+++ b/notebooks/exploration_data_processing.ipynb
@@ -121,6 +121,99 @@
     "decoded = pd.read_csv(data_path)\n",
     "decoded.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6fab1049",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exemple = \"1 ALT_CORE_B_OR_02_C\\\\n2 ALT_COREKS_B_OR_09_R1\\\\n3 ALT_COREKS_B_OR_16_R1\\\\n3 ALT_COREKS_B_OR_18_R1\\\\n1 ALT_COREKS_B_OR_05_C\\\\n2 ALT_COREKS_B_OR_05_R1\\\\n1 ALT_COREKS_B_OR_06_U_3401\\\\n3 ALT_COREKS_B_OR_08_C\\\\n1 ALT_COREKS_B_OR_09_C\\\\n3 ALT_COREKS_B_OR_11_C\\\\n1 ALT_COREKS_B_OR_22_U_3833\\\\n2 ALT_COREKS_B_LY_15_R2\\\\n1 ALT_COREKS_B_OR_12_U_2679\\\\n3 ALT_COREKS_B_OR_14_C\\\\n1 ALT_COREKS_B_OR_15_C\\\\n2 ALT_COREKS_B_OR_22_C\\\\n3 ALT_COREKS_B_OR_21_R1\\\\n1 ALT_COREKS_B_OR_23_C\\\\n3 ALT_COREKS_B_OR_24_C\\\\n3 ALT_COREKS_B_OR_25_C\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ec03d64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_cards(cards_string) :\n",
+    "    return cards_string.split(\"\\\\n\")\n",
+    "\n",
+    "def remove_uniques(cards_list) :\n",
+    "    no_uniques = [elem for elem in cards_list if \"_U_\" not in elem]\n",
+    "    return no_uniques\n",
+    "\n",
+    "def rename_ids(cards_list) :\n",
+    "    # Utiliser un mapping pour renommer les cartes car de nombreux ids sont différents pour des versions d'une même carte (notamment les héros au fil des set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c0be77b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exemple_split = split_cards(exemple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ee98ced7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exemple_split = remove_uniques(exemple_split)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "dffc49a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1 ALT_CORE_B_OR_02_C',\n",
+       " '2 ALT_COREKS_B_OR_09_R1',\n",
+       " '3 ALT_COREKS_B_OR_16_R1',\n",
+       " '3 ALT_COREKS_B_OR_18_R1',\n",
+       " '1 ALT_COREKS_B_OR_05_C',\n",
+       " '2 ALT_COREKS_B_OR_05_R1',\n",
+       " '3 ALT_COREKS_B_OR_08_C',\n",
+       " '1 ALT_COREKS_B_OR_09_C',\n",
+       " '3 ALT_COREKS_B_OR_11_C',\n",
+       " '2 ALT_COREKS_B_LY_15_R2',\n",
+       " '3 ALT_COREKS_B_OR_14_C',\n",
+       " '1 ALT_COREKS_B_OR_15_C',\n",
+       " '2 ALT_COREKS_B_OR_22_C',\n",
+       " '3 ALT_COREKS_B_OR_21_R1',\n",
+       " '1 ALT_COREKS_B_OR_23_C',\n",
+       " '3 ALT_COREKS_B_OR_24_C',\n",
+       " '3 ALT_COREKS_B_OR_25_C']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exemple_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efb4de30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
