--- a/notebooks/exploration_data_processing.ipynb
+++ b/notebooks/exploration_data_processing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "d550e7be",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "2b6982ab",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "4  \"1 ALT_CORE_B_OR_02_C\\n3 ALT_COREKS_B_OR_09_R1...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,35 +124,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "6fab1049",
+   "execution_count": 34,
+   "id": "6b1bd74a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "exemple = \"1 ALT_CORE_B_OR_02_C\\\\n2 ALT_COREKS_B_OR_09_R1\\\\n3 ALT_COREKS_B_OR_16_R1\\\\n3 ALT_COREKS_B_OR_18_R1\\\\n1 ALT_COREKS_B_OR_05_C\\\\n2 ALT_COREKS_B_OR_05_R1\\\\n1 ALT_COREKS_B_OR_06_U_3401\\\\n3 ALT_COREKS_B_OR_08_C\\\\n1 ALT_COREKS_B_OR_09_C\\\\n3 ALT_COREKS_B_OR_11_C\\\\n1 ALT_COREKS_B_OR_22_U_3833\\\\n2 ALT_COREKS_B_LY_15_R2\\\\n1 ALT_COREKS_B_OR_12_U_2679\\\\n3 ALT_COREKS_B_OR_14_C\\\\n1 ALT_COREKS_B_OR_15_C\\\\n2 ALT_COREKS_B_OR_22_C\\\\n3 ALT_COREKS_B_OR_21_R1\\\\n1 ALT_COREKS_B_OR_23_C\\\\n3 ALT_COREKS_B_OR_24_C\\\\n3 ALT_COREKS_B_OR_25_C\""
+    "exemple = decoded[\"cards\"][16010]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "8ec03d64",
    "metadata": {},
    "outputs": [],
    "source": [
     "def split_cards(cards_string) :\n",
-    "    return cards_string.split(\"\\\\n\")\n",
+    "    return cards_string[1:-1].split(\"\\\\n\")\n",
     "\n",
     "def remove_uniques(cards_list) :\n",
     "    no_uniques = [elem for elem in cards_list if \"_U_\" not in elem]\n",
     "    return no_uniques\n",
     "\n",
-    "def rename_ids(cards_list) :\n",
-    "    # Utiliser un mapping pour renommer les cartes car de nombreux ids sont différents pour des versions d'une même carte (notamment les héros au fil des set)"
+    "def rename_ks_ids(cards_list) :\n",
+    "    no_ks = [elem.replace(\"COREKS\", \"CORE\") for elem in cards_list]\n",
+    "    return no_ks\n",
+    "\n",
+    "def alt_art_mapping(cards_list) :\n",
+    "    mapping = {\n",
+    "        # Sierra & Oddball\n",
+    "        \"ALT_COREKS_B_AX_01_C\" : \"ALT_CORE_B_AX_01_C\", \n",
+    "        \"ALT_CORE_P_AX_01_C\" : \"ALT_CORE_B_AX_01_C\", \n",
+    "        \"ALT_ALIZE_B_AX_01_C\" : \"ALT_CORE_B_AX_01_C\", \n",
+    "        \"ALT_WCS25_P_AX_01_C\" : \"ALT_CORE_B_AX_01_C\", \n",
+    "        \"ALT_WCF25_P_AX_01_C\" : \"ALT_CORE_B_AX_01_C\", \n",
+    "        \"ALT_DUSTERCB_P_AX_01_C\" : \"ALT_CORE_B_AX_01_C\", \n",
+    "        # Treyst & Rossum\n",
+    "        \"ALT_COREKS_B_AX_02_C\" : \"ALT_CORE_B_AX_02_C\", \n",
+    "        \"ALT_CORE_P_AX_02_C\" : \"ALT_CORE_B_AX_02_C\", \n",
+    "        \"ALT_BISE_B_AX_02_C\" : \"ALT_CORE_B_AX_02_C\", \n",
+    "        \"ALT_WCS25_P_AX_02_C\" : \"ALT_CORE_B_AX_02_C\", \n",
+    "        # Subhash & Marmo\n",
+    "        \"ALT_COREKS_B_AX_03_C\" : \"ALT_CORE_B_AX_03_C\", \n",
+    "        \"ALT_CORE_P_AX_03_C\" : \"ALT_CORE_B_AX_03_C\", \n",
+    "        \"ALT_ALIZE_B_AX_03_C\" : \"ALT_CORE_B_AX_03_C\", \n",
+    "        \"ALT_BISE_B_AX_03_C\" : \"ALT_CORE_B_AX_03_C\", \n",
+    "        \"ALT_WCS25_P_AX_03_C\" : \"ALT_CORE_B_AX_03_C\", \n",
+    "        # Kojo & Boodah\n",
+    "        \"ALT_COREKS_B_BR_01_C\" : \"ALT_CORE_B_BR_01_C\", \n",
+    "        \"ALT_CORE_P_BR_01_C\" : \"ALT_CORE_B_BR_01_C\", \n",
+    "        \"ALT_ALIZE_B_BR_01_C\" : \"ALT_CORE_B_BR_01_C\", \n",
+    "        \"ALT_WCS25_P_BR_01_C\" : \"ALT_CORE_B_BR_01_C\", \n",
+    "        \"ALT_WCF25_P_BR_01_C\" : \"ALT_CORE_B_BR_01_C\", \n",
+    "        \"ALT_DUSTERCB_P_BR_01_C\" : \"ALT_CORE_B_BR_01_C\", \n",
+    "        # Basira & Kaizaimon\n",
+    "        \"ALT_COREKS_B_BR_03_C\" : \"ALT_CORE_B_BR_03_C\", \n",
+    "        \"ALT_CORE_P_BR_03_C\" : \"ALT_CORE_B_BR_03_C\", \n",
+    "        \"ALT_ALIZE_B_BR_03_C\" : \"ALT_CORE_B_BR_03_C\", \n",
+    "        \"ALT_BISE_B_BR_03_C\" : \"ALT_CORE_B_BR_03_C\", \n",
+    "        \"ALT_WCS25_P_BR_03_C\" : \"ALT_CORE_B_BR_03_C\", \n",
+    "        # Atsadi & Surge\n",
+    "        \"ALT_COREKS_B_BR_02_C\" : \"ALT_CORE_B_BR_02_C\", \n",
+    "        \"ALT_CORE_P_BR_02_C\" : \"ALT_CORE_B_BR_02_C\", \n",
+    "        \"ALT_BISE_B_BR_02_C\" : \"ALT_CORE_B_BR_02_C\", \n",
+    "        \"ALT_WCS25_P_BR_02_C\" : \"ALT_CORE_B_BR_02_C\", \n",
+    "        # Nevenka & Blotch\n",
+    "        \"ALT_COREKS_B_LY_01_C\" : \"ALT_CORE_B_LY_01_C\", \n",
+    "        \"ALT_CORE_P_LY_01_C\" : \"ALT_CORE_B_LY_01_C\",\n",
+    "        \"ALT_BISE_B_LY_01_C\" : \"ALT_CORE_B_LY_01_C\", \n",
+    "        \"ALT_WCS25_P_LY_01_C\" : \"ALT_CORE_B_LY_01_C\", \n",
+    "        \"ALT_WCF25_P_LY_01_C\" : \"ALT_CORE_B_LY_01_C\", \n",
+    "        \"ALT_DUSTERCB_P_LY_01_C\" : \"ALT_CORE_B_LY_01_C\", \n",
+    "        # Fen & Crowbar\n",
+    "        \"ALT_COREKS_B_LY_03_C\" : \"ALT_CORE_B_LY_03_C\", \n",
+    "        \"ALT_CORE_P_LY_03_C\" : \"ALT_CORE_B_LY_03_C\", \n",
+    "        \"ALT_ALIZE_B_LY_03_C\" : \"ALT_CORE_B_LY_03_C\", \n",
+    "        \"ALT_BISE_B_LY_03_C\" : \"ALT_CORE_B_LY_03_C\", \n",
+    "        \"ALT_WCS25_P_LY_03_C\" : \"ALT_CORE_B_LY_03_C\", \n",
+    "        # Auraq & Kibble\n",
+    "        \"ALT_COREKS_B_LY_02_C\" : \"ALT_CORE_B_LY_02_C\", \n",
+    "        \"ALT_CORE_P_LY_02_C\" : \"ALT_CORE_B_LY_02_C\", \n",
+    "        \"ALT_ALIZE_B_LY_02_C\" : \"ALT_CORE_B_LY_02_C\", \n",
+    "        \"ALT_WCS25_P_LY_02_C\" : \"ALT_CORE_B_LY_02_C\", \n",
+    "        # Teija & Nauraa\n",
+    "        \"ALT_COREKS_B_MU_01_C\" : \"ALT_CORE_B_MU_01_C\", \n",
+    "        \"ALT_CORE_P_MU_01_C\" : \"ALT_CORE_B_MU_01_C\", \n",
+    "        \"ALT_BISE_B_MU_01_C\" : \"ALT_CORE_B_MU_01_C\", \n",
+    "        \"ALT_WCS25_P_MU_01_C\" : \"ALT_CORE_B_MU_01_C\", \n",
+    "        \"ALT_WCF25_P_MU_01_C\" : \"ALT_CORE_B_MU_01_C\", \n",
+    "        \"ALT_DUSTERCB_P_MU_01_C\" : \"ALT_CORE_B_MU_01_C\", \n",
+    "        # Rin & Orchid\n",
+    "        \"ALT_COREKS_B_MU_03_C\" : \"ALT_CORE_B_MU_03_C\", \n",
+    "        \"ALT_CORE_P_MU_03_C\" : \"ALT_CORE_B_MU_03_C\", \n",
+    "        \"ALT_ALIZE_B_MU_03_C\" : \"ALT_CORE_B_MU_03_C\",\n",
+    "        \"ALT_BISE_B_MU_03_C\" : \"ALT_CORE_B_MU_03_C\",\n",
+    "        \"ALT_WCS25_P_MU_03_C\" : \"ALT_CORE_B_MU_03_C\",\n",
+    "        # Arjun & Spike\n",
+    "        \"ALT_COREKS_B_MU_02_C\" : \"ALT_CORE_B_MU_02_C\",\n",
+    "        \"ALT_CORE_P_MU_02_C\" : \"ALT_CORE_B_MU_02_C\",\n",
+    "        \"ALT_ALIZE_B_MU_02_C\" : \"ALT_CORE_B_MU_02_C\",\n",
+    "        \"ALT_WCS25_P_MU_02_C\" : \"ALT_CORE_B_MU_02_C\",\n",
+    "        # Sigismar & Wingspan\n",
+    "        \"ALT_COREKS_B_OR_01_C\" : \"ALT_CORE_B_OR_01_C\",\n",
+    "        \"ALT_CORE_P_OR_01_C\" : \"ALT_CORE_B_OR_01_C\",\n",
+    "        \"ALT_ALIZE_B_OR_01_C\" : \"ALT_CORE_B_OR_01_C\",\n",
+    "        \"ALT_WCS25_P_OR_01_C\" : \"ALT_CORE_B_OR_01_C\",\n",
+    "        \"ALT_WCF25_P_OR_01_C\" : \"ALT_CORE_B_OR_01_C\",\n",
+    "        \"ALT_DUSTERCB_P_OR_01_C\" : \"ALT_CORE_B_OR_01_C\",\n",
+    "        # Gulrang & Tocsin\n",
+    "        \"ALT_COREKS_B_OR_03_C\" : \"ALT_CORE_B_OR_03_C\",\n",
+    "        \"ALT_CORE_P_OR_03_C\" : \"ALT_CORE_B_OR_03_C\",\n",
+    "        \"ALT_ALIZE_B_OR_03_C\" : \"ALT_CORE_B_OR_03_C\",\n",
+    "        \"ALT_BISE_B_OR_03_C\" : \"ALT_CORE_B_OR_03_C\",\n",
+    "        \"ALT_WCS25_P_OR_03_C\" : \"ALT_CORE_B_OR_03_C\",\n",
+    "        # Waru & Mack\n",
+    "        \"ALT_COREKS_B_OR_02_C\" : \"ALT_CORE_B_OR_02_C\",\n",
+    "        \"ALT_CORE_P_OR_02_C\" : \"ALT_CORE_B_OR_02_C\",\n",
+    "        \"ALT_BISE_B_OR_02_C\" : \"ALT_CORE_B_OR_02_C\",\n",
+    "        \"ALT_WCS25_P_OR_02_C\" : \"ALT_CORE_B_OR_02_C\",\n",
+    "        # Akesha & Taru\n",
+    "        \"ALT_COREKS_B_YZ_01_C\" : \"ALT_CORE_B_YZ_01_C\",\n",
+    "        \"ALT_CORE_P_YZ_01_C\" : \"ALT_CORE_B_YZ_01_C\",\n",
+    "        \"ALT_ALIZE_B_YZ_01_C\" : \"ALT_CORE_B_YZ_01_C\",\n",
+    "        \"ALT_BISE_B_YZ_01_C\" : \"ALT_CORE_B_YZ_01_C\",\n",
+    "        \"ALT_WCS25_P_YZ_01_C\" : \"ALT_CORE_B_YZ_01_C\",\n",
+    "        \"ALT_WCF25_P_YZ_01_C\" : \"ALT_CORE_B_YZ_01_C\",\n",
+    "        \"ALT_DUSTERCB_P_YZ_01_C\" : \"ALT_CORE_B_YZ_01_C\",\n",
+    "        # Afanas & Senka\n",
+    "        \"ALT_COREKS_B_YZ_03_C\" : \"ALT_CORE_B_YZ_03_C\",\n",
+    "        \"ALT_CORE_P_YZ_03_C\" : \"ALT_CORE_B_YZ_03_C\",\n",
+    "        \"ALT_ALIZE_B_YZ_03_C\" : \"ALT_CORE_B_YZ_03_C\",\n",
+    "        \"ALT_BISE_B_YZ_03_C\" : \"ALT_CORE_B_YZ_03_C\",\n",
+    "        \"ALT_WCS25_P_YZ_03_C\" : \"ALT_CORE_B_YZ_03_C\",\n",
+    "        # Lindiwe & Maw\n",
+    "        \"ALT_COREKS_B_YZ_02_C\" : \"ALT_CORE_B_YZ_02_C\",\n",
+    "        \"ALT_CORE_P_YZ_02_C\" : \"ALT_CORE_B_YZ_02_C\",\n",
+    "        \"ALT_WCS25_P_YZ_02_C\" : \"ALT_CORE_B_YZ_02_C\"\n",
+    "        # Entrainement Mécanique\n",
+    "        # Entrainement Physique\n",
+    "        # Entrainement A Capella\n",
+    "        # Entrainement a la Meditation\n",
+    "        # Entrainement a l'esprit d'equipe\n",
+    "        # Entrainement Magique\n",
+    "        # Pass : Col - Lac - Taiga - Toundra - Pic - Galerie\n",
+    "        # Promo Pack : Aroro - Sunisa - Sasika - Nyala - Gericht - Vaike\n",
+    "        # Pass : Fleche du Nilam - Grand Place - Ferme - Scene - Mess - Raffinerie\n",
+    "        # Promo Pack : Pasiphae - Ariane  - Minotaure - Dédale - Thesee - Icare\n",
+    "        # Promo Pack : Alelo - Saggita - Zaratan - Koi - Halua - Lucan\n",
+    "        # Tumult Champion : Entomologiste - Templier - Renarde - Bassisste - Duel de Cran - Grems\n",
+    "        # World Qualif : Meduse - Troupiere - Aloe - Encriere - Petit Djinn - Recup\n",
+    "        # Procu Judge\n",
+    "    }\n",
+    "\n",
+    "def separation(cards_list) :\n",
+    "    decklist = []\n",
+    "    for elem in cards_list :\n",
+    "        if elem.startswith(\"3\") :\n",
+    "            decklist.append(elem[2:])\n",
+    "            decklist.append(elem[2:])\n",
+    "            decklist.append(elem[2:])\n",
+    "        elif elem.startswith(\"2\") :\n",
+    "            decklist.append(elem[2:])\n",
+    "            decklist.append(elem[2:])\n",
+    "        else :\n",
+    "            decklist.append(elem[2:])\n",
+    "    return decklist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "id": "c0be77b4",
    "metadata": {},
    "outputs": [],
@@ -162,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "id": "ee98ced7",
    "metadata": {},
    "outputs": [],
@@ -172,33 +313,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
+   "id": "1b584906",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exemple_split = rename_ks_ids(exemple_split)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "ead77e11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exemple_split = separation(exemple_split)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "dffc49a4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1 ALT_CORE_B_OR_02_C',\n",
-       " '2 ALT_COREKS_B_OR_09_R1',\n",
-       " '3 ALT_COREKS_B_OR_16_R1',\n",
-       " '3 ALT_COREKS_B_OR_18_R1',\n",
-       " '1 ALT_COREKS_B_OR_05_C',\n",
-       " '2 ALT_COREKS_B_OR_05_R1',\n",
-       " '3 ALT_COREKS_B_OR_08_C',\n",
-       " '1 ALT_COREKS_B_OR_09_C',\n",
-       " '3 ALT_COREKS_B_OR_11_C',\n",
-       " '2 ALT_COREKS_B_LY_15_R2',\n",
-       " '3 ALT_COREKS_B_OR_14_C',\n",
-       " '1 ALT_COREKS_B_OR_15_C',\n",
-       " '2 ALT_COREKS_B_OR_22_C',\n",
-       " '3 ALT_COREKS_B_OR_21_R1',\n",
-       " '1 ALT_COREKS_B_OR_23_C',\n",
-       " '3 ALT_COREKS_B_OR_24_C',\n",
-       " '3 ALT_COREKS_B_OR_25_C']"
+       "['ALT_CORE_B_OR_01_C',\n",
+       " 'ALT_CORE_B_OR_05_R1',\n",
+       " 'ALT_CORE_B_OR_05_R1',\n",
+       " 'ALT_CORE_B_OR_14_C',\n",
+       " 'ALT_CORE_B_OR_14_C',\n",
+       " 'ALT_CORE_B_OR_16_R1',\n",
+       " 'ALT_CORE_B_OR_16_R1',\n",
+       " 'ALT_CORE_B_OR_16_R1',\n",
+       " 'ALT_CORE_B_OR_05_R1',\n",
+       " 'ALT_CORE_B_OR_06_C',\n",
+       " 'ALT_CORE_B_OR_06_C',\n",
+       " 'ALT_CORE_B_OR_06_C',\n",
+       " 'ALT_CORE_B_OR_08_C',\n",
+       " 'ALT_CORE_B_OR_08_C',\n",
+       " 'ALT_CORE_B_OR_08_C',\n",
+       " 'ALT_CORE_B_OR_09_C',\n",
+       " 'ALT_CORE_B_OR_09_C',\n",
+       " 'ALT_CORE_B_LY_15_R2',\n",
+       " 'ALT_CORE_B_LY_15_R2',\n",
+       " 'ALT_CORE_B_OR_24_C',\n",
+       " 'ALT_CORE_B_OR_24_C',\n",
+       " 'ALT_CORE_B_OR_24_C',\n",
+       " 'ALT_CORE_B_YZ_20_R2',\n",
+       " 'ALT_CORE_B_YZ_20_R2',\n",
+       " 'ALT_BISE_B_MU_50_R2',\n",
+       " 'ALT_BISE_B_MU_50_R2',\n",
+       " 'ALT_BISE_B_OR_54_C',\n",
+       " 'ALT_BISE_B_OR_54_C',\n",
+       " 'ALT_BISE_B_OR_54_C',\n",
+       " 'ALT_BISE_B_OR_59_C',\n",
+       " 'ALT_BISE_B_OR_59_C',\n",
+       " 'ALT_BISE_B_OR_59_C',\n",
+       " 'ALT_ALIZE_B_MU_31_R2',\n",
+       " 'ALT_ALIZE_B_MU_31_R2',\n",
+       " 'ALT_ALIZE_B_MU_31_R2',\n",
+       " 'ALT_ALIZE_B_OR_44_C',\n",
+       " 'ALT_ALIZE_B_OR_44_C']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
