entrainement du modèle

--- a/notebooks/visualization_corpus.ipynb
+++ b/notebooks/visualization_corpus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "49a1bf0f",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "41556059",
    "metadata": {},
    "outputs": [],
@@ -23,10 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9877e42d",
+   "execution_count": 4,
+   "id": "df22648d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre de decks : 20196\n",
+      "Min/Max/Moy cartes par deck : 36, 97, 37.73\n"
+     ]
+    }
+   ],
    "source": [
     "corpus_path = \"../data/processed/card_corpus.txt\"\n",
     "with open(corpus_path, \"r\", encoding=\"utf-8\") as f:\n",
@@ -39,36 +48,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "07a8ac90",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'decks' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Taille du vocabulaire\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m vocab = \u001b[38;5;28mset\u001b[39m(card \u001b[38;5;28;01mfor\u001b[39;00m deck \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdecks\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m card \u001b[38;5;129;01min\u001b[39;00m deck)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mTaille du vocabulaire : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(vocab)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'decks' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Taille du vocabulaire : 1373\n"
      ]
     }
    ],
    "source": [
-    "# Taille du vocabulaire\n",
     "vocab = set(card for deck in decks for card in deck)\n",
     "print(f\"Taille du vocabulaire : {len(vocab)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f72aaa31",
+   "execution_count": 6,
+   "id": "ecd55ea3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 20 cartes les plus fréquentes :\n",
+      "ALT_ALIZE_B_BR_34_C 11286\n",
+      "ALT_CORE_B_BR_06_R1 11057\n",
+      "ALT_CORE_B_OR_24_C 9616\n",
+      "ALT_ALIZE_B_BR_32_C 8858\n",
+      "ALT_CORE_B_YZ_21_C 8327\n",
+      "ALT_CORE_B_OR_16_R1 7644\n",
+      "ALT_CORE_B_OR_08_C 7432\n",
+      "ALT_CORE_B_OR_05_R1 7346\n",
+      "ALT_CORE_B_OR_14_C 7039\n",
+      "ALT_CORE_B_BR_11_C 6701\n",
+      "ALT_CORE_B_BR_15_C 6676\n",
+      "ALT_CORE_B_YZ_04_C 6636\n",
+      "ALT_CORE_B_LY_07_C 6474\n",
+      "ALT_CORE_B_YZ_06_C 6474\n",
+      "ALT_CORE_B_MU_13_C 6278\n",
+      "ALT_CORE_B_BR_30_R1 6137\n",
+      "ALT_CORE_B_MU_04_C 6023\n",
+      "ALT_CORE_B_LY_23_C 5888\n",
+      "ALT_ALIZE_B_MU_44_C 5861\n",
+      "ALT_CORE_B_MU_16_R1 5791\n"
+     ]
+    }
+   ],
    "source": [
-    "# Top 20 cartes\n",
     "counter = Counter(card for deck in decks for card in deck)\n",
     "print(\"Top 20 cartes les plus fréquentes :\")\n",
     "for card, freq in counter.most_common(20):\n",
