Retrait du décodage

--- a/notebooks/01_exploration_data_processing.ipynb
+++ b/notebooks/01_exploration_data_processing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d550e7be",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
     "from pathlib import Path\n",
     "\n",
     "project_root = Path().resolve().parents[0]\n",
-    "data_path = project_root / \"data\" / \"decoded\" / \"decoded_2025_12_04.csv\""
+    "data_path = project_root / \"data\" / \"raw\" / \"raw_data.csv\""
    ]
   },
   {
